Release notes by PHOCOA version number.

Legend:
[bugfix] - Bug fix.
[new] - New feature.
[BC-break] - Backwards-compatibility may be broken. Update your code to "the new way" as noted.
[BC-deprecated] - Backwards-compatibility mode supported, but deprecated. Update your code to "the new way" as noted.

Version 0.2.4 - ??
- [new] Added __rootSkin template variable to all page templates to make it easier to use skin resources in modules that are used with WFModuleView. Without access to __rootSkin you had to add code to willRenderPage() to stuff the skin into the template to achieve this on every module where you needed access to the skin.
- [new] onEvent: x do s!:noAction now routes to WFPage's noAction handler (so that the page delegate does not *have* to have that function declared).
- [new] ServerAction now includes all RPC paramaters in the request.
- [new] Added a modifier to onEvent: x do s!:actionName (the ! means runsIfInvalid=true)
- [bc-break] If an RPC is detected and runsIfInvalid=true then the page's ignoreErrors() will default to true. This prevents any errors from showing on the page. This is the normative use case for ServerAction, but it could cause a BC problem if anyone is using runsIfInvalid=true and expecting errors to be displayed (doubtful that this affects anyone).
- [new] Add class attribute support to WFSelect.
- [new] Add errorCodesForKey() method to WFErrorsException to make looking for certain errors easier for test writing.
- [new] Add createTestStub phocoa task to create test stubs for PHPUnit.
- [new] Add Forgotten Password link in "login error message" as well.
- [bugfix] Fix a couple of bugs that caused .htaccess support to be broken in "newProject" runs.

Version 0.2.3 - 4/22/2009
- [new] Automatically activate the username field on the login module.
- [new] Fixtures improvements: Add support for "named objects" in to-many relationships.